--- a/src/app/patientdata/patientdata.component.html
+++ b/src/app/patientdata/patientdata.component.html
@@ -1,1 +1,121 @@
-<p>patientdata works!</p>
+<div class="container mt-3 mb-3">
+    <div class="row">
+        <div class="col-md-2 ">
+        </div>
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-12 panel panel-primary">
+                            <h4>Patient Profile</h4>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <form>
+                                <div class="form-group row">
+                                    <label class="col-3 col-form-label">MRN</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.id}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="name" class="col-3 col-form-label">First Name</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.name[0].given[0]}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="lastname" class="col-3 col-form-label">Last Name</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.name[0].family}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="select" class="col-3 col-form-label">Gender</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.gender}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="email" class="col-3 col-form-label">DOB</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.birthDate}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="website" class="col-3 col-form-label">Phone</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.telecom[0].value}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="website" class="col-3 col-form-label">Address Line 1</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.address[0].line}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="website" class="col-3 col-form-label">City</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.address[0].city}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="website" class="col-3 col-form-label">State</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.address[0].state}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="website" class="col-3 col-form-label">Country</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.address[0].country}}">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="website" class="col-3 col-form-label">Pincode</label>
+                                    <label class="col-1 col-form-label">:</label>
+                                    <div class="col-8">
+                                        <input class="form-control here" disabled=true type="text"
+                                            value="{{FHIRClients.entry[0].resource.address[0].postalCode}}">
+                                    </div>
+                                </div>
+
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2 ">
+        </div>
+    </div>
+</div>
+
+<!-- <div class="panel panel-primary">
+    <div class="panel-heading">Panel with panel-primary class</div>
+    <div class="panel-body">Panel Content</div>
+  </div> -->
