--- a/src/app/patientdata/patientdata.component.scss
+++ b/src/app/patientdata/patientdata.component.scss
@@ -1,10 +1,58 @@
 label,
-input
- {
+input {
   display: block;
   font-weight: 600;
 }
 
 h4 {
   color: brown;
+}
+
+:host ::ng-deep {
+  ngx-spinner {
+    .overlay {
+      opacity: 0.5 !important;
+    }
+  }
+}
+
+:host ::ng-deep {
+  .nav-link i.fa {
+    color: #39526b;
+  }
+}
+
+#hero {
+  width: 100%;
+  height: 113vh;
+  background: url("../../assets/images/bg-cyan.JPG") center center;
+  // background: -webkit-gradient(radial, center center, 0, center center, 460, from(#1a82f7), to(#2F2727));
+  background-attachment: fixed;
+  background-position: 50% 50%;
+  background-size: cover;
+  position: relative;
+  margin-top: -20px;
+  z-index: 9;
+}
+
+.heading{
+  color: brown;
+}
+
+.text-box{
+  background-color: whitesmoke;
+}
+.centered-form {
+  margin-top: 60px;
+}
+
+.centered-form .panel {
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
+}
+
+label.label-floatlabel {
+  font-weight: bold;
+  color: #46b8da;
+  font-size: 11px;
 }
